--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -94,13 +94,13 @@
 
                                         </div>
                                     </button>
-                                    <button *ngIf="tipoDestino === 2" mat-raised-button type="button" color="accent"
+                                    <!-- <button *ngIf="tipoDestino === 2" mat-raised-button type="button" color="accent"
                                         class="mr-2" (click)="irANacionales()">
                                         <div class="flex items-center">
                                             <img class="w-6 h-6 mr-2" src="assets/icons/destinos-nacionales.svg" />
                                             {{ t('destinos-nacionales') }}
                                         </div>
-                                    </button>
+                                    </button> -->
                                 </div>
                             </form>
                         </div>
